# stm32-frequency-tool

./: .gitignore  .gitmodules  README.rst  build.sh  flash.sh
ctrl_commands/: pwm_config.sh
plots/: plot_minpresc_error.py  plot_single_freq_error.py
project/: CMakeLists.txt
project/src/: main.c  stm32f3xx_hal_conf.h  stm32f3xx_hal_msp.c  system.c
project/src/bsp/: pin.c  pin.h
project/src/func/: cmds.re.c  error.c  error.h  movmean.c  movmean.h
project/src/io/: acomp.c  acomp.h  clock.c  clock.h  freqmeter.c  freqmeter.h  gpio.c  gpio.h  pwm.c  pwm.h  uart.c  uart.h
project/src/prpc/: cmds.c  cmds.h  lex.re.c  msg.c  parse.c  types.h
scripts/: build.sh
